# gazebo-mcp

./: .env.example  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PRD.md  README.md  STATUS.md  TODO.md  docker-compose.yml  gazebo-mcp-backend.spec  glama.json  install-mcp.ps1  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  run_server.py  start.ps1
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: ASSESSMENT.md  GAZEBO_VS_OTHERS.md  INSTALL_GAZEBO.md  SETUP.md  TOOLS.md
hooks/: hooks.json
mcpb/: CHANGELOG.md  manifest.json  pack.ps1  requirements.txt
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/gazebo_mcp/: server.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json  cua-smoke.py
skills/gazebo-simulation/: SKILL.md
src/ag_gazebo_bridge/: server.py
src/ag_gazebo_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gazebo_mcp/: __main__.py  server.py
tests/: __init__.py  test_backend.py  test_server.py
web_sota/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  vite.config.ts
web_sota/backend/: log_buffer.py  server.py
web_sota/backend/routes/: ai.py  fuel.py  logging.py
web_sota/e2e/: fleet-audit.spec.ts
web_sota/src/: App.tsx  index.css
web_sota/src/components/: FloatingChat.tsx
web_sota/src/lib/: api.ts  use-zoom.ts
web_sota/src/pages/: Dashboard.tsx  Help.tsx  LLM.tsx  Logging.tsx  Models.tsx  Settings.tsx  Skills.tsx  (+1 more)
(+2 files in other folders)
