[project]
name = "ag-gazebo-bridge"
version = "0.2.0"
description = "FastMCP 3.2 bridge from Gazebo simulation to fleet robotics mesh"
authors = [
    { name = "Sandra Schipal", email = "sandra@vibe-architect.ai" }
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
ag-gazebo-bridge = "ag_gazebo_bridge.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
