[project]
name = "gazebo-mcp"
version = "0.2.0"
description = "Gazebo simulation via MCP"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.4.2,<4", "httpx>=0.28", "fastapi>=0.115", "uvicorn[standard]>=0.34", "prefab-ui>=0.14.0"]

[project.scripts]
gazebo-mcp = "gazebo_mcp:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-mock>=3", "httpx>=0.28", "ty>=0.0.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gazebo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
